Therion 6.3.3 (in progress):


--------------------------------------------------------------------------------

Therion 6.3.2 (2025-01-06):

therion:
 * SVG maps are now editable (map data is not in <defs> section any more)
 * geomag data updated up to 2030
 * splay shots removed from SHP 2D line layer (to be consistent with PDF;
   splay shots are included in 3D SHP files)
 * code improvements: manual memory management cleanup [#604],
   refactoring of thpoint internal state [#611]
 * documentation updates including #610, #615
 * bugs fixed:
   - Proj canʼt find files in the user-writable directory on Windows
   - import .3d unmatched survey legs [#606]
   - fixed surface grid misalignment when CS of grid differs from output CS

xtherion:
 * allow space in thconfig filename [#603]
 * code improvements: replace obsolete ‛case’ with ‛switch’ [#612]

Windows installer:
 * fixed shortcuts to thbook.pdf and CHANGES.txt

infrastructure:
 * add several ‛diff’ tests, fix CSV database export [#609]
 * CI: fix Windows installer version in GIT forks [#613]
 * removed Ubuntu 20.04 CI job [#616]
 * support for code coverage generation [#618]
 * Proj 9.5.1 included to the testing script

--------------------------------------------------------------------------------

Therion 6.3.1 (2024-11-22):

xtherion:
 * revert the change introduced in 6.3.0 to allow spaces in the thconfig
   filename [#590] to fix file opening issues on Windows

--------------------------------------------------------------------------------

Therion 6.3.0 (2024-11-20):

therion:
 * REMOVED proj-auto initialization file option;
   remove it from your ini files if you use it
 * support for Geospatial PDF maps added (custom georeferencing used in versions
   5.3-6.2.1 is not included in PDF maps any more)
 * new layout option: geospatial on/off
 * projection (*.prj) files associated with shapefiles are generated by Proj
   for all output projections;